Adicionando JavaScript e finalizando a aplicação

--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
                     <span>Entradas</span>
                     <img src="./assets/income.svg" alt="Imagem de entradas">
                 </h3>
-                <p>R$5.000,00</p>
+                <p id="incomeDisplay">R$0,00</p>
             </div>
             <div class="card">
                 <h3> 
                     <span>Saídas</span>
                     <img src="./assets/expense.svg" alt="Imagem de saidas">
                 </h3>
-                <p>R$2.000,00</p>
+                <p id="expenseDisplay">R$0,00</p>
             </div>
             <div class="card total">
                 <h3>
                     <span>Total</span>
                     <img src="./assets/total.svg" alt="Imagem de total">
                 </h3>
-                <p>R$3.000,00</p>
+                <p id="totalDisplay">R$0,00</p>
             </div>
         </section>
 
@@ -61,30 +61,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td class="description">Luz</td>
-                        <td class="expense">- R$ 500,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Criação de WebSite</td>
-                        <td class="income">R$ 5000,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Internet</td>
-                        <td class="expense">- R$ 200,00</td>
-                        <td class="date">23/01/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover transação">
-                        </td>
-                    </tr>
+                    
                 </tbody>
             </table>
         </section>
@@ -98,7 +75,7 @@
         <div class="modal">
             <div id="form">
                 <h2>Nova Transação</h2>
-                <form action="">
+                <form action="" onsubmit="Form.submit(event)" >
                     <div class="input-group">
                         <label class="sr-only" for="description">Descrição</label>
                         <input type="text" id="description" name="description" placeholder="Descrição">
